--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f8faf4; }
+  background: #91cb7f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8ec1d9; }
+  background: #de7e01; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5362d1; }
+  background: #ce3b2b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5b0cca; }
+  background: #633853; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6b61b7; }
+  background: #b32e3b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #c73ff4; }
+  background: #aaa7ab; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e6a464; }
+  background: #355ac2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #af0862; }
+  background: #470ce7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c9b839; }
+  background: #552d4c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3226e7; }
+  background: #83ff84; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a422f9; }
+  background: #cdf1de; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #1ab14f; }
+  background: #675773; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5cea1f; }
+  background: #a087d6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #09786d; }
+  background: #47e3d1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #799889; }
+  background: #b05e79; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #e00f59; }
+  background: #8fe143; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #33c034; }
+  background: #150230; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2f51de; }
+  background: #f4c566; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d9ca60; }
+  background: #4d67b5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a10261; }
+  background: #08690e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a7632f; }
+  background: #caac1d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ca51d3; }
+  background: #5e7cca; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #672fa4; }
+  background: #954897; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #61eb53; }
+  background: #ae42a1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c63af4; }
+  background: #242ed6; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9f81ff; }
+  background: #ca5ddb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #983917; }
+  background: #cb7720; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #04b3a4; }
+  background: #e1f218; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4cc0e6; }
+  background: #3acfc2; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #541469; }
+  background: #06aebf; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e6806b; }
+  background: #8da11a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #870643; }
+  background: #27e233; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #77b83a; }
+  background: #87854f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #de0664; }
+  background: #d91968; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #097b11; }
+  background: #aee64b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c63072; }
+  background: #70c95d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6b6876; }
+  background: #997fc7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9d08c0; }
+  background: #2d301e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9c0eaf; }
+  background: #16131c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #117482; }
+  background: #680a7c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d018d1; }
+  background: #5c9358; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #da6202; }
+  background: #237aef; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7da268; }
+  background: #102973; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #af3ff1; }
+  background: #55b36c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c16ec8; }
+  background: #035fca; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #fc73bb; }
+  background: #3aff9c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #db50f4; }
+  background: #fb1ae9; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b3715a; }
+  background: #881bae; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e5c316; }
+  background: #12501f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e02813; }
+  background: #808cc5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #df3d5a; }
+  background: #c3bdbc; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #a10a5c; }
+  background: #3f932b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #aec7c2; }
+  background: #7f4ba0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f2c857; }
+  background: #52880b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #40528e; }
+  background: #c7fb2b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5a7125; }
+  background: #28904b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #561f6c; }
+  background: #25e925; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a7dd61; }
+  background: #355905; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0d6742; }
+  background: #a83524; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #84ca2e; }
+  background: #f3934b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #26abda; }
+  background: #c29292; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #edb6bc; }
+  background: #a86544; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f3afb5; }
+  background: #a2ef66; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #fec779; }
+  background: #6bcf93; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c08344; }
+  background: #078d20; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3bb9bb; }
+  background: #690a49; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4a9f11; }
+  background: #3128d4; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8859fb; }
+  background: #f69f50; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #7a587c; }
+  background: #a4cddb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #03cdea; }
+  background: #9ce313; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5175a5; }
+  background: #ebd2d2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #568fee; }
+  background: #84c3ad; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f64e0d; }
+  background: #0f2144; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e6e096; }
+  background: #2372eb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #cd7796; }
+  background: #cf5912; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #24c613; }
+  background: #e521ae; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a32e6f; }
+  background: #80e7cf; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #82d4a9; }
+  background: #bd4daa; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2c1a47; }
+  background: #559c57; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #4418d2; }
+  background: #15eb87; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #95e30b; }
+  background: #17c8ce; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4df625; }
+  background: #df69cc; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5afdea; }
+  background: #f7ed9e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #21c521; }
+  background: #09c40e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b447e3; }
+  background: #9cee62; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #566d4e; }
+  background: #a8a262; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ff2484; }
+  background: #0dbce7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #fb7426; }
+  background: #a6ade2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3b4dd8; }
+  background: #c8e1e5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d496ad; }
+  background: #3def03; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c471d1; }
+  background: #9a8435; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c0fdb5; }
+  background: #3be6fc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0927a5; }
+  background: #229fd8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #43a2eb; }
+  background: #971d49; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #649990; }
+  background: #55abca; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #118590; }
+  background: #cbfb89; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #52096c; }
+  background: #0a0d23; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #f32f39; }
+  background: #54f92a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0fe1b2; }
+  background: #8f185b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cdf9ab; }
+  background: #38fcb8; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12643,6 +12643,15 @@ td .check-container {
 
   .message {
     font-size: 13px; } }
+.notification-main-wrapper {
+  padding-bottom: 15px !important; }
+
+.notification-model-header {
+  padding-bottom: 25px !important;
+  padding-top: 25px !important; }
+  .notification-model-header .adapter-modal-name {
+    margin-left: 18px !important; }
+
 .notification-lists-wrapper table .parent-row-gray td {
   color: #777 !important; }
 .notification-lists-wrapper table .parent-row {
@@ -12943,7 +12952,12 @@ td .check-container {
   .policy-routine-results-wrapper .inner-tab-content .col-lg-3 {
     padding-right: 15px !important; }
   .policy-routine-results-wrapper .policy-left-part .start-date-text {
-    padding-bottom: 2px; } }
+    padding-bottom: 2px; }
+
+  .notification-main-wrapper .adding-adapter-modal-header {
+    margin-top: 15px !important; }
+  .notification-main-wrapper .notification-model-header {
+    padding-top: 5px !important; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
