--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -378,6 +378,16 @@
         }
     }
 
+    .notification-main-wrapper {
+        .adding-adapter-modal-header {
+            margin-top: 15px !important;
+        }
+
+        .notification-model-header {
+            padding-top: 5px !important;
+        }
+    }
+
 }
 
 /*767 screen end here*/
