changes in notification pages

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #91cb7f; }
+  background: #b826c2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #de7e01; }
+  background: #9cb8d6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ce3b2b; }
+  background: #ead7d3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #633853; }
+  background: #a41280; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b32e3b; }
+  background: #b2f2d2; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #aaa7ab; }
+  background: #cd863c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #355ac2; }
+  background: #11cdf2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #470ce7; }
+  background: #6e2707; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #552d4c; }
+  background: #528728; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #83ff84; }
+  background: #747650; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #cdf1de; }
+  background: #b45b90; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #675773; }
+  background: #ef617f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a087d6; }
+  background: #373033; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #47e3d1; }
+  background: #f44311; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b05e79; }
+  background: #b7b52d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8fe143; }
+  background: #9998d7; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #150230; }
+  background: #7fb273; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f4c566; }
+  background: #2ac635; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #4d67b5; }
+  background: #74b4d2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #08690e; }
+  background: #9fd6a5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #caac1d; }
+  background: #ab7543; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5e7cca; }
+  background: #11a385; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #954897; }
+  background: #eed2a0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ae42a1; }
+  background: #32743c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #242ed6; }
+  background: #a3177c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ca5ddb; }
+  background: #8f7da2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #cb7720; }
+  background: #108bfc; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e1f218; }
+  background: #6fbb93; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3acfc2; }
+  background: #6ccc55; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #06aebf; }
+  background: #c2c2fd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8da11a; }
+  background: #1e8f81; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #27e233; }
+  background: #028a90; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #87854f; }
+  background: #839a46; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d91968; }
+  background: #5b8c23; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #aee64b; }
+  background: #237b21; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #70c95d; }
+  background: #fa4f05; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #997fc7; }
+  background: #70b431; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #2d301e; }
+  background: #78e32c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #16131c; }
+  background: #1dafe6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #680a7c; }
+  background: #bd3f63; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5c9358; }
+  background: #50af74; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #237aef; }
+  background: #f4e939; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #102973; }
+  background: #8d892b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #55b36c; }
+  background: #b0ab5a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #035fca; }
+  background: #e6b63c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3aff9c; }
+  background: #eb8235; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #fb1ae9; }
+  background: #7a9f9f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #881bae; }
+  background: #386089; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #12501f; }
+  background: #270505; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #808cc5; }
+  background: #eb5564; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c3bdbc; }
+  background: #242d53; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3f932b; }
+  background: #83b79a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7f4ba0; }
+  background: #83c09d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #52880b; }
+  background: #6c6745; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c7fb2b; }
+  background: #2e7838; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #28904b; }
+  background: #4f69b8; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #25e925; }
+  background: #b1c280; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #355905; }
+  background: #f192d4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a83524; }
+  background: #99773b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f3934b; }
+  background: #6c82d9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c29292; }
+  background: #e5ad31; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a86544; }
+  background: #589704; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a2ef66; }
+  background: #c6350d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #6bcf93; }
+  background: #32c51e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #078d20; }
+  background: #5d1fca; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #690a49; }
+  background: #08f0dd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3128d4; }
+  background: #293cdc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f69f50; }
+  background: #182c64; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a4cddb; }
+  background: #6746ca; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #9ce313; }
+  background: #311ab3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ebd2d2; }
+  background: #22eece; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #84c3ad; }
+  background: #ad993a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0f2144; }
+  background: #7f86f8; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2372eb; }
+  background: #e8db05; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #cf5912; }
+  background: #241b98; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e521ae; }
+  background: #dd60af; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #80e7cf; }
+  background: #a4c394; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bd4daa; }
+  background: #4c4b3e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #559c57; }
+  background: #8bc927; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #15eb87; }
+  background: #48e0f1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #17c8ce; }
+  background: #bd67bb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #df69cc; }
+  background: #7e9ae1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f7ed9e; }
+  background: #dca9e1; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #09c40e; }
+  background: #f4bddf; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9cee62; }
+  background: #661f0d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a8a262; }
+  background: #225e9b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0dbce7; }
+  background: #64e7d9; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a6ade2; }
+  background: #c5ccd4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c8e1e5; }
+  background: #42dca0; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #3def03; }
+  background: #e607ab; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #9a8435; }
+  background: #5013c8; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3be6fc; }
+  background: #570709; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #229fd8; }
+  background: #a64b0b; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #971d49; }
+  background: #b396e1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #55abca; }
+  background: #74b792; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #cbfb89; }
+  background: #37ff2b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0a0d23; }
+  background: #42a9ae; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #54f92a; }
+  background: #4c510e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8f185b; }
+  background: #e1e052; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #38fcb8; }
+  background: #ce40ec; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11505,15 +11505,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12644,7 +12640,7 @@ td .check-container {
   .message {
     font-size: 13px; } }
 .notification-main-wrapper {
-  padding-bottom: 15px !important; }
+  padding-bottom: 35px !important; }
 
 .notification-model-header {
   padding-bottom: 25px !important;
@@ -12652,6 +12648,8 @@ td .check-container {
   .notification-model-header .adapter-modal-name {
     margin-left: 18px !important; }
 
+.notification-lists-wrapper table tr {
+  cursor: pointer; }
 .notification-lists-wrapper table .parent-row-gray td {
   color: #777 !important; }
 .notification-lists-wrapper table .parent-row {
